# code-samples

./: README.md
actionscript/: README.md
actionscript/litl-video-channel/: README.md  Version.as  Version.as.template  build.properties.template  build.xml
actionscript/weather-channel/: Makefile.am  README.md  autogen.sh  build.properties.template  build.xml  configure.ac
actionscript/weather-channel/assets/: LICENSE.txt
actionscript/weather-channel/build-assets/jpg/: Thumbs.db
actionscript/weather-channel/build-assets/swf/: Blizzard.swf  Fog.swf  Fog_Light.swf  Hail.swf  Hail_Night.swf  Hail_Rain.swf  Haze.swf  Heavy_Cloud.swf  Lightning.swf  Night_Clear.swf  Night_Cloudy.swf  Night_Heavy_Cloud.swf  Night_Rain.swf  Night_Rain_Light.swf  Night_Snow.swf  Rain.swf  Rain_Hail_Snow.swf  Rain_Heavy.swf  Rain_Ice.swf  Rain_Light.swf  Rain_Snow.swf  Snow.swf  Snow_Heavy.swf  Snow_Wind.swf  Sunny_Clear.swf  Sunny_Cloudy.swf  Windy.swf
actionscript/weather-channel/libs/: as3corelib.swc  weatherAssets.swc
actionscript/weather-channel/metadata/: metadata.json
actionscript/weather-channel/src/: LitlChannelMetadata.as  WeatherChannel.fla  styles.css
actionscript/weather-channel/src/com/litl/util/: DateUtils.as
actionscript/weather-channel/src/com/litl/weather/: WeatherChannel.as
actionscript/weather-channel/src/com/litl/weather/events/: FiveDayItemEvent.as  OpenUrlEvent.as  OptionsBubbleEvent.as  SearchBoxEvent.as  WeatherServiceEvent.as
actionscript/weather-channel/src/com/litl/weather/model/: WeatherView.as
actionscript/weather-channel/src/com/litl/weather/model/twc/: Bar.as  CC.as  Day.as  DayF.as  Head.as  Link.as  Lnks.as  Loc.as  Moon.as  Part.as  SearchLoc.as  UV.as  Weather.as  Wind.as
actionscript/weather-channel/src/com/litl/weather/renderer/: CardItemRenderer.as
actionscript/weather-channel/src/com/litl/weather/service/: SlideFactory.as  WeatherService.as
actionscript/weather-channel/src/com/litl/weather/tests/: WeatherDataTest.as
actionscript/weather-channel/src/com/litl/weather/utils/: BitmapGrabber.as  StringUtils.as
actionscript/weather-channel/src/com/litl/weather/view/: Animations.as  CardSlideView.as  CardView.as  CardViewThreeDay.as  ChannelView.as  ClipItemRenderer.as  ContentMenuView.as  FiveDayItem.as  FocusView.as  OptionsBubble.as  SearchBox.as  SearchBoxItem.as  ViewManager.as
basic-html/: PhotoSharingEmail.html  README.md
objective-c/cluster-view/: ClusterImageView.h  ClusterImageView.m  README.md
objective-c/core-animation/: AnimatedTableCellView.h  AnimatedTableCellView.m  README.md
objective-c/grid-view/: GridController.h  GridController.m  GridViewCell.h  GridViewCell.m  (+5 more)
(+267 files in other folders)
